link changed of employee detail

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ a{padding:10px;}</style>
 	<a href="login.html">LOGIN</a>
 	<a href="detailpage.html">CREATE</a>
 	<a href="employeelist.html">EMPLOYEE LIST</a>
-	<a href="employeelist.html">DETAIL OF SELECTED EMPLOYE</a>
+	<a href="employeedetail.html">DETAIL OF SELECTED EMPLOYE</a>
 
 </body>
 </html>
